// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history reducer ADD_NEW_MESSAGE should not set scrollTo if the author is a different user 1`] = `
Object {
  "channel": Object {
    "id": "channelId1",
  },
  "user": Object {
    "id": "userId1",
  },
}
`;

exports[`history reducer ADD_NEW_MESSAGE should not update the state on a different channel 1`] = `
Object {
  "channel": Object {
    "id": "aaa",
  },
}
`;

exports[`history reducer ADD_NEW_MESSAGE should set scrollTo if the author is the current user 1`] = `
Object {
  "channel": Object {
    "id": "channelId1",
  },
  "user": Object {
    "id": "userId1",
  },
}
`;

exports[`history reducer UPDATE_OPTIMISTICALLY_ADDED_MESSAGE should return the original state if clientsideId is missing 1`] = `
Object {
  "messages": Array [
    Object {
      "clientId": "abc",
    },
  ],
}
`;

exports[`history reducer UPDATE_OPTIMISTICALLY_ADDED_MESSAGE should return the original state if the message is missing 1`] = `
Object {
  "messages": Array [
    Object {
      "id": "234",
    },
    Object {
      "clientId": "abc",
    },
    Object {
      "clientId": "def",
    },
  ],
}
`;

exports[`history reducer UPDATE_OPTIMISTICALLY_ADDED_MESSAGE should update the message id based on the clientId and set the state to sent 1`] = `
Object {
  "loadedNewerMessage": false,
  "messages": Array [
    Object {
      "id": "234",
    },
    Object {
      "clientId": "abc",
      "id": "123",
      "state": "sent",
    },
    Object {
      "clientId": "def",
    },
  ],
}
`;

exports[`history reducer should handle UNSET_HISTORY_SCROLL_TO 1`] = `
Object {
  "loadedNewerMessage": false,
  "scrollTo": null,
  "scrollToAlignment": null,
}
`;
